minor layout fix - set z-index for dropdown-menu to 2000
git-svn-id: https://server.mycore.de/svn/maven/mir/trunk@35320 7089d063-bc14-496d-ac90-53de1872eb6c

--- a/mir-layout/src/main/less/common/base.less
+++ b/mir-layout/src/main/less/common/base.less
@@ -55,5 +55,9 @@ html {
         padding: 2em 0px;
     }
 
+    .dropdown-menu {
+        z-index: 2000;
+    }
+
   }
 }
